[tool.poetry]
name = "pyladies-november-2019-python-38"
version = "0.1.0"
description = ""
authors = ["Michael Twomey <mtwomey@vectra.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.740.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
